--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>LevelUp | Эффективное средство для повышения потенции</title>
 </head>
 <body>
+<header></header>
 <section class="promo">
     <h1>LevelUp – Эффективное средство против эректильной дисфункции</h1>
     <div class="promo-features">
@@ -19,11 +20,49 @@
             <li>Улучшает качество спермы и подвижность сперматозоидов</li>
             <li>Является средством профилактики рака простаты</li>
         </ul>
+        <a href="#">Заказать</a>
     </div>
     <div class="promo-image">
         <img src="img/prod.png" alt="LevelUp - Средство для потенции">
     </div>
-
 </section>
+<section class="product-features">
+    <h2>Состав таблеток для потенции LevelUp</h2>
+    <div class="product-image">
+        <img src="img/prod.png" alt="Преимущества выбора средства для повышения потенции LevelUp">
+        <div class="features-left">
+            <div>
+                <img src="" alt="">
+                <p>Силденафил</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Целлюлоза микрокристаллическая</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Кальция гидрофосфат</p>
+            </div>
+        </div>
+        <div class="features-right">
+            <div>
+                <img src="" alt="">
+                <p>Натрия кроскармеллоза</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Магния стеарат</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <p>Женьшень</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer></footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
