--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
         <img src="img/prod.png" alt="Преимущества выбора средства для повышения потенции LevelUp">
         <div class="features-left">
             <div>
-                <img src="" alt="">
+                <img src="img/viagra.png" alt="Силденафил">
                 <p>Силденафил</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="img/enzyme.png" alt="Целлюлоза микрокристаллическая">
                 <p>Целлюлоза микрокристаллическая</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="img/calcium.png" alt="Кальция гидрофосфат">
                 <p>Кальция гидрофосфат</p>
             </div>
         </div>
         <div class="features-right">
             <div>
-                <img src="" alt="">
+                <img src="img/sodium.png" alt="Натрия кроскармеллоза">
                 <p>Натрия кроскармеллоза</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="img/magnesium.png" alt="Магния стеарат">
                 <p>Магния стеарат</p>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="img/ginseng.png" alt="Женьшень">
                 <p>Женьшень</p>
             </div>
         </div>
@@ -63,6 +63,6 @@
 
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
