--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <meta name="description" content="Препарат для повышения потенции LevelUp является универсальным средством с доказанной эффективностью. Успейте заказать по выгодной цене! Мы на связи 24/7.">
     <!-- CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
     <title>LevelUp | Эффективное средство для повышения потенции</title>
 </head>
+
 <body>
+
 <header></header>
+
 <section class="promo">
     <h1>LevelUp – Эффективное средство против эректильной дисфункции</h1>
+
     <div class="promo-features">
         <ul>
             <li>Способствует укреплению мужской силы</li>
@@ -22,47 +27,116 @@
         </ul>
         <a href="#">Заказать</a>
     </div>
+
     <div class="promo-image">
         <img src="img/prod.png" alt="LevelUp - Средство для потенции">
     </div>
 </section>
+
 <section class="product-features">
     <h2>Состав таблеток для потенции LevelUp</h2>
+
     <div class="product-image">
+
         <img src="img/prod.png" alt="Преимущества выбора средства для повышения потенции LevelUp">
+        <a href="#">Заказать</a>
+
         <div class="features-left">
             <div>
                 <img src="img/viagra.png" alt="Силденафил">
                 <p>Силденафил</p>
             </div>
+
             <div>
                 <img src="img/enzyme.png" alt="Целлюлоза микрокристаллическая">
                 <p>Целлюлоза микрокристаллическая</p>
             </div>
+
             <div>
                 <img src="img/calcium.png" alt="Кальция гидрофосфат">
                 <p>Кальция гидрофосфат</p>
             </div>
         </div>
+
         <div class="features-right">
             <div>
                 <img src="img/sodium.png" alt="Натрия кроскармеллоза">
                 <p>Натрия кроскармеллоза</p>
             </div>
+
             <div>
                 <img src="img/magnesium.png" alt="Магния стеарат">
                 <p>Магния стеарат</p>
             </div>
+
             <div>
                 <img src="img/ginseng.png" alt="Женьшень">
                 <p>Женьшень</p>
             </div>
         </div>
+
+    </div>
+</section>
+
+<section class="reviews">
+    <h2>Отзывы клиентов</h2>
+
+    <div class="swiper reviewSwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="review-image">
+                    <img src="img/red-hat.jpg" alt="Фото клиента">
+                </div> 
+                <h3>Алекс В.</h3>
+                <p>Препарат эффективный. Живу в СПб, доставили в течение пары дней. Сотрудники всегда на связи. Спасибо, обязательно обращусь к вам снова</p>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="review-image">
+                    <img src="img/handsome.jpg" alt="Фото клиента">
+                </div> 
+                <h3>Сергей С.</h3>
+                <p>Очень приятная цена. Быстрая доставка. Рекомендую!</p>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="review-image">
+                    <img src="img/no-problem.jpg" alt="Фото клиента">
+                </div> 
+                <h3>Виталий С.</h3>
+                <p>Средство работает. Эффект длится достаточно долго. Никаких побочек не обнаружено.</p>
+            </div>
+        </div>
+
+        
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    <div class="swiper-pagination"></div>
+
+    </div>
+
+</section>
+
+<section class="second-promo">
+    <div class="firstPromoBlock">
+        <div>
+            <img src="img/doctor.png" alt="Врач высшей категории">
+        </div>
+        <div>
+            <p>Средство для потенции LevelUp, разработанное специалистами компании MediCo, доказало свою эффективность и широко используется в борьбе против эректильной дисфункции.
+            Также препарат назначается в качестве превентивного средства, если существует риск развития рака предстательной железы, пениса и яичек.</p>
+            <a href="#">Заказать</a>
+            <span>Существуют противопоказания, необходима консультация специалиста.</span>
+        </div>
     </div>
 </section>
 
 <footer></footer>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
