--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 </section>
 
 <section class="second-promo">
+    <h2>Действенное средство в борьбе с импотенцией</h2>
     <div class="firstPromoBlock">
         <div>
             <img src="img/doctor.png" alt="Врач высшей категории">
@@ -130,7 +131,20 @@
             <span>Существуют противопоказания, необходима консультация специалиста.</span>
         </div>
     </div>
+    <div class="secondPromoBlock">
+        <div>
+            <i class="fas fa-shipping-fast"></i> <span>Быстрая доставка</span>
+        </div>
+        <div>
+            <i class="fas fa-copy"></i> <span>Сертифицированный препарат</span>
+        </div>
+        <div>
+            <i class="fas fa-hand-holding-usd"></i> <span>Выгодная цена</span>
+        </div>
+    </div>
 </section>
+
+
 
 <footer></footer>
 
