--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <section class="promo">
     
-        <iframe src="https://www.youtube.com/embed/RhlQvbvMg-0?controls=0&showinfo=0&rel=0&autoplay=1&mute=1&loop=1&modestbranding=1" frameborder="0"></iframe>
+        <iframe src="https://www.youtube.com/embed/RhlQvbvMg-0?controls=0&showinfo=0&rel=0&autoplay=1&mute=1&loop=1&modestbranding=1"></iframe>
     
 
     <div class="container">
